--- a/build.gradle
+++ b/build.gradle
@@ -46,4 +46,5 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile("com.nhaarman:mockito-kotlin:1.4.0")
 }
